--- a/core/templates/core/tattoo.html
+++ b/core/templates/core/tattoo.html
@@ -5,7 +5,7 @@
 <!-- This section is for the first two tables of the barbershop services  
     -->
 <section class="container-fluid mb-md-3 mt-md-3">
-    <h1 class="text-white text-center mb-3 mt-2">Prices for Piercing Services</h1>
+    <h2 class="text-white text-center mb-3 mt-2">Prices for Piercing Services</h2>
     <div class="row mx-md-5">
         <div class="col-md-6 py-2">
             <table class="table-borderless table-services text-center border-bottom">
@@ -54,7 +54,7 @@
 </section>
 <!-- This section is for the last two tables of the barbershop services  
     -->
-<section class="container-fluid mb-md-3">
+<div class="container-fluid mb-md-3">
     <div class="row mx-md-5">
         <div class="col-md-6 py-2">
             <table class="table-borderless table-services text-center border-bottom">
@@ -99,7 +99,7 @@
             </table>
         </div>
     </div>
-</section>
+</div>
 <!-- This section is for the tattoo studio employees it has there name, image, nickname/role and a bio with some information about them
         -->
 <section>
