--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -12,7 +12,7 @@
                         {% csrf_token %}
                         <!--csrf token is added to give security to django forms-->
                         <fieldset class="form-group">
-                            <legend class="mb-3 text-white">Log In</legend>
+                            <h4 class="mb-3 text-white">Log In</h4>
                             <!--Crispy forms-->
                             {{ form|crispy }}
                         </fieldset>
