--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -72,7 +72,7 @@
             <div class="col-lg-12">
                 <iframe title="Location of the barbershop"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1204.8882500865961!2d-8.983939360802736!3d52.84441221304227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b6d2d159a8405%3A0x462ed348b097865b!2sThe%20Height!5e0!3m2!1sen!2sie!4v1685393596646!5m2!1sen!2sie"
-                    width="100%" height="300px" allowfullscreen="" loading="lazy"
+                    allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
