--- a/static/core/main.css
+++ b/static/core/main.css
@@ -105,6 +105,11 @@ body {
     z-index: 1;
 }
 
+iframe {
+    height: 300px;
+    width: 100%;
+}
+
 /* -------------------------------------------------------------------------------Barbershop page */
 
 .table-services {
