Add HTML & Python validation

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -19,7 +19,7 @@
                                 <p class="text-white account-heading fw-bold">Username:<span>
                                         {{ user.username }}</span>
                                 </p>
-                                <p class="text-white fw-bold"> Email: <span>{{ user.email }}</span></p>
+                                <p class="text-white fw-bold"> Email: <span class="small">{{ user.email }}</span></p>
                                 <p class="text-white fw-bold">Phone:<span>
                                         {{ user.profile.phone }}</span>
                                 </p>
