Changed button text and spelling mistakes

--- a/core/templates/core/add_testimonial.html
+++ b/core/templates/core/add_testimonial.html
@@ -17,7 +17,7 @@
                         {{ form|crispy }}
                     </fieldset>
                     <div class="form-group">
-                        <button class="btn btn-outline-info my-3 text-white" type="submit">Review</button>
+                        <button class="btn btn-outline-info my-3 text-white" type="submit">Submit</button>
                     </div>
                 </form>
             </div>
