--- a/core/templates/core/usertestimonial_confirm_delete.html
+++ b/core/templates/core/usertestimonial_confirm_delete.html
@@ -20,9 +20,7 @@
                     </form>
                     <div class="reviews-btn">
                         <a href="{% url 'home-page' %}" class="btn btn-outline-success my-3 text-white"
-                            type="submit">Return
-                            To Home
-                            Page</a>
+                            type="submit">Return Home</a>
                     </div>
                 </div>
             </div>
