Changed button text

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -80,11 +80,9 @@
                                         <li>
                                             <div class="reviews-btn mt-2">
                                                 <p><a href="{% url 'edit-testimonial-page' user_testimonial.pk %}"
-                                                        class="btn btn-sm btn-success text-center">Edit
-                                                        Testimonial</a></p>
+                                                        class="btn btn-sm btn-success text-center">Edit</a></p>
                                                 <p><a href="{% url 'delete-testimonial-page' user_testimonial.pk %}"
-                                                        class="btn btn-sm btn-danger mb-4">Delete
-                                                        Testimonial</a></p>
+                                                        class="btn btn-sm btn-danger mb-4">Delete</a></p>
                                             </div>
                                         </li>
                                         {% endfor %}
