Fixed wrong page links for mobile nav buttons

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -115,8 +115,8 @@
                     </li>
                     <!--These two buttons only show on mobile screens-->
                     <li class="nav-item nav-btns gap-2">
-                        <a href="{% url 'profile-page' %}" class=" btn btn-sm d-md-none bg-black text-white button-link mr-2">Profile</a>
-                        <a href="{% url 'logout-page' %}" class=" btn btn-sm d-md-none bg-black text-white button-link">Logout</a>
+                        <a href="{% url 'register-page' %}" class=" btn btn-sm d-md-none bg-black text-white button-link mr-2">Register</a>
+                        <a href="{% url 'login-page' %}" class=" btn btn-sm d-md-none bg-black text-white button-link">Login</a>
                         
                     </li>
                     {% endif %}
